# signalJourney

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.cursor/rules/: dev_workflow.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  mcp-server-ci.yml  mcp-server.yml
docs/: Makefile  bids.md  conf.py  contributing.md  faq.md  index.md  index.rst  introduction.md  namespaces.md  pipeline_research.md  requirements.txt
docs/api/: index.md  index.rst
docs/examples/: basic_preprocessing.md  basic_preprocessing_eeglab.md  basic_preprocessing_mne.md  best_practices.md  connectivity.md  connectivity_eeglab.md  connectivity_mne.md  ica_decomposition.md  ica_decomposition_eeglab.md  ica_decomposition_mne.md  index.md  index.rst  source_localization.md  source_localization_eeglab.md  source_localization_mne.md  time_frequency.md  time_frequency_eeglab.md  time_frequency_mne.md
docs/examples/real_world/: nemar_pipeline.md
docs/guides/: index.md  index.rst  tools_matlab.md  validator_cli.md  validator_python.md
docs/specification/: fields.md  index.md  index.rst  namespaces.md  overview.md  validation.md  versioning.md
docs/tutorials/: creating_manual.md  index.md  index.rst  matlab_tools.md  python_lib.md  validating.md
mcp-server/: .env.example  .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
mcp-server/src/config/: index.ts
mcp-server/src/core/: db.ts  mcp-types.ts  server.ts
mcp-server/src/handlers/: resource.handlers.ts  scanner.handlers.ts  system.handlers.ts
mcp-server/src/middleware/: auth.middleware.ts  requestId.middleware.ts
mcp-server/src/models/: RepositoryScan.model.ts  resource.model.ts
mcp-server/src/routes/: auth.routes.ts
mcp-server/src/schemas/: scanner.schemas.ts
mcp-server/src/services/: repositoryScanner.service.ts  resource.service.test.ts  resource.service.ts  scanPersistence.service.ts  token.service.test.ts  token.service.ts
mcp-server/src/utils/: logger.ts
mcp-server/tests/: setup.ts
mcp-server/tests/fixtures/: .gitkeep
mcp-server/tests/integration/: auth.routes.test.ts  scanPersistence.service.test.ts  scanner.handlers.test.ts
mcp-server/tests/unit/: repositoryScanner.service.test.ts  token.service.test.ts
schema/: signalJourney.schema.json
schema/definitions/: InputSource.schema.json  OutputTarget.schema.json  inputSource.schema.json  outputTarget.schema.json  parameter.schema.json  pipelineInfo.schema.json  processingStep.schema.json  qualityMetricsObject.schema.json  softwareDetails.schema.json  versionHistoryEntry.schema.json
schema/examples/: basic_preprocessing_pipeline_eeglab.signalJourney.json  basic_preprocessing_pipeline_mne.signalJourney.json  complex_pipeline.json  connectivity_analysis_pipeline.signalJourney.json  connectivity_analysis_pipeline_eeglab.signalJourney.json  ica_decomposition_pipeline.signalJourney.json  ica_decomposition_pipeline_eeglab.signalJourney.json  ica_decomposition_pipeline_mne.signalJourney.json  metrics_heavy.json  simple_pipeline.json  source_localization_pipeline_eeglab.signalJourney.json  source_localization_pipeline_mne.signalJourney.json  time_frequency_analysis_pipeline_eeglab.signalJourney.json  time_frequency_analysis_pipeline_mne.signalJourney.json
schema/extensions/: eeg.schema.json  extensionsContainer.schema.json  nemar.schema.json
schema/versions/0.1.0/: signalJourney.schema.json
schema/versions/0.1.0/definitions/: softwareDetails.schema.json
schema/versions/0.1.0/extensions/: nemar.schema.json
scripts/: build_docs.sh
scripts/matlab/: README.md  convertSignalJourneyVersion.m  readSignalJourney.m  validateSignalJourney.m  writeSignalJourney.m
src/services/: token.service.test.ts
src/signaljourney_validator/: README.md  __init__.py  cli.py  errors.py  schema_registry.py  validate_examples_hook.py  validator.py
tasks/: tasks.json
tests/: README.md  __init__.py  conftest.py
tests/integration/: scanner.handlers.test.ts
tests/matlab/: run_matlab_tests.m  test_convertSignalJourneyVersion.m  test_readSignalJourney.m  test_validateSignalJourney.m  test_writeSignalJourney.m
tests/matlab/fixtures/: malformed.json  minimal_valid_sj.json
tests/schemas/: test_schema_validation.py
tests/schemas/examples/invalid/: bad_pattern.json  missing_required_top_level.json  processing_steps_empty.json  step_missing_required.json  wrong_type.json
tests/schemas/examples/valid/: minimal_valid.json
tests/unit/: repositoryScanner.service.test.ts
tests/validator/: test_cli.py  test_schema_registry.py  test_validator.py
