[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signaljourney_validator"
version = "0.0.1"
authors = [
{ name="Seyed Yahya Shirazi", email="shirazi@ieee.org" }
]
description = "A Python library to validate signalJourney JSON files against the official specification schema."
readme = "src/signaljourney_validator/README.md" # Point to the package README
license = {text = "BSD 3-Clause License"} # Explicitly state license
requires-python = ">=3.8"
keywords = ["signaljourney", "schema", "validation", "provenance", "biosignal", "neuroscience"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.0",
    "click>=8.0"
]

[project.urls]
"Homepage" = "https://neuromechanist.github.io/signaljourney"
"Repository" = "https://github.com/neuromechanist/signaljourney" # Added Repository URL
"Bug Tracker" = "https://github.com/neuromechanist/signaljourney/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0", # Combines flake8, black, isort etc. - recommended
    "fuzzywuzzy>=0.18", # For suggestions
    "python-Levenshtein>=0.12", # Optional but improves fuzzywuzzy speed
    "build", # For building the package
    "twine" # For uploading to PyPI
]
suggestions = [
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.12"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.0", # Added for schema validation tests
    "ruff>=0.1" # Added for linting
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0", # Using Material theme
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=0.8.0",
    "pymdown-extensions>=9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0" # For showing last updated dates
]

[project.scripts]
signaljourney-validate = "signaljourney_validator.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
# select = ["E", "F", "W", "I"] # Deprecated

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Moved here

[tool.mypy]
strict = true 